# cppTraining

Cherno/: CMakeLists.txt
Cherno/Old/: Any.cpp  Any.h  ArgumentEval.cpp  ArrayDS.cpp  ArrayDS.h  Arrays.cpp  Arrays.h  Assign.cpp  Casting.cpp  Casting.h  Chrono.cpp  Chrono.h  DynamicCast.cpp  Faster.cpp  Iterators.cpp  Iteratorsv2.cpp  Ivalues.cpp  Maps.cpp  Move.cpp  MoveSemantic.cpp  MultipleTypes.cpp  MultipleTypes.h  Null.cpp  Optional.cpp  Optional.h  Singletons.cpp  Sorting.cpp  Sorting.h  StaticAnalysis.cpp  StringFaster.cpp  StructuredBinding.cpp  StructuredBinging.h  TrackMemory.cpp  TypePunning.cpp  TypePunning.h  Unions.cpp  Unions.h  VectorDS.h  Vectors.cpp  Vectors.h  (+5 more)
Hyla/Part10/: task1.c  task2.c  task3.c
Hyla/Part6/: CMakeLists.txt  task1_6.c  task2_6.c  task3_6.c  task4_6.c  task5_6.c
Hyla/Part7/: task1.c  task2.c  task3.c  task4.c  task5.c
Hyla/Part8/: CMakeLists.txt
Hyla/Part9/: task1.c  task2.c  task3.c
Hyla/test/: task1  task1.c  task2.c
